kubernetes/clusters/kenobi/iot/templates/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: iot
  labels:
    istio-injection: enabled
